# seomate-internal-ai

./: .env.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_audit_status_anomalies.py  0003_audit_anomalies_jsonb.py  0004_saved_analyses.py
configs/: pixelette.yml
docs/: SEOMATE-handover.docx  SEOMATE-roadmap.docx  agent-audit-runbook.md  agent-credentials.md  agent-execution-runbook.md  audit-validation-pixelettetech.docx  google-oauth-setup.md  ingest-contract.md  llm-eval-hybrid.md  o1-taxonomy.md  site-auditor-architecture.md
scripts/: build_handover_docx.py  build_roadmap_docx.py  build_seo_validation_doc.py  get_google_refresh_token.py
seomate/: __init__.py  brief.py  cli.py  competitive.py  config.py  data_contract.py  ingest.py  orchestrator.py  saved.py
seomate/adapters/: __init__.py  _base.py  dataforseo.py  embeddings.py  ga4.py  gbp.py  google_oauth.py  gsc.py  knowledge_graph.py  llm.py  psi.py  wikidata.py  wikipedia.py
seomate/agent/: __init__.py  execute.py  gather.py  plan.py  remediation.py  target.py
seomate/pillars/: __init__.py  _base.py  p0_strategic.py  p1_onpage.py  p1_schema.py  p2_psi.py  p2_technical.py  p3_backlinks.py  p4_content.py  p5_local.py  p6_geo.py  p6_serp.py  p_embeddings.py  p_freebatch.py  p_keyword.py
seomate/storage/: __init__.py  db.py  models.py
seomate/utils/: intent.py  (+9 more)
tests/: test_agent_execute.py  test_agent_gather.py  test_agent_plan.py  test_agent_target.py  test_base_retry_transient.py  test_brief.py  test_competitive_discovery.py  test_extractor_audit.py  test_ga4.py  test_google_oauth.py  test_ingest.py  test_llm_no_row_retry.py  test_p3_referrer.py  test_plan_evidence_weight.py  test_remediation_missing_specs.py  test_schema_visible_match_failopen.py
(+6 files in other folders)
